K8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassNmae: nginx
  rules:
  - host: go-web-app.local
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
